frontend/assets/stylesheets/pages/_events-list.scss
/* ==========================================================================
   Event Listings
   ========================================================================== */

/* ==========================================================================
   Event Listings - Header Bar
   ========================================================================== */

.header-bar {
    position: relative;
    padding-left: rem($gs-gutter / 2);
    padding-right: rem($gs-gutter / 2);

    .header-bar__title {
        @include fs-headline(4);
        padding: rem($gs-gutter / 2) 0 rem(55px);
        max-width: rem(gs-span(8));
    }

    @include mq(tablet) {
        min-height: rem(132px);
        padding-left: rem($gs-gutter);

        .header-bar__title {
            @include fs-headline(6);
            padding: rem($gs-gutter) 0;
        }
    }

    @include mq(mem-full) {
        padding-left: rem(gs-span(2) + $gs-gutter * 2); // 180
        .header-bar__title {
            @include fs-headline(7);
        }
    }
}

/* ==========================================================================
   Event Listings - Event Logo
   ========================================================================== */
// TODO: Document usage of event-logo

.event-logo {
    position: absolute;
    bottom: rem($gs-gutter / 2);
    right: rem($gs-gutter / 2);

    height: rem(44px);
    background-position: right;
    background-size: contain;
    background-repeat: no-repeat;

    @include mq(tablet) {
        bottom: rem($gs-gutter);
        right: rem($gs-gutter);
        height: rem(87px);
    }
}

/* ==========================================================================
   Event Listings - Event blocks (sections)
   ========================================================================== */

.event-block {
    clear: both;
    position: relative;
    background-color: $white;
    padding: rem($gs-gutter / 2) 0;
    overflow: hidden;
    border-bottom: rem(1px) solid $mem-live-accent;

    @include mq(tablet) {
        padding: rem($gs-gutter) 0;
    }
    @include mq(desktop) {
        padding: rem($gs-gutter) rem($gs-gutter) 0;
    }

    &:last-child {
        border-bottom: 0;
    }
}

.event-block__header,
.event-block__footer {
    padding: 0 rem($gs-gutter/2) rem($gs-baseline);

    @include mq(desktop) {
        padding-left: 0;
    }
}

.event-block__header {
    @include mq(mem-full) {
        float: left;
        width: rem(gs-span(2));
        margin-right: $gs-gutter;
        padding: 0;
    }
}
.event-block__header__title {
    @include fs-header(4);
}
.event-block__events {
    overflow: hidden;

    @include mq(mem-full) {
        width: rem(gs-span(12));
    }
}

.event-block__empty,
.event-block__no-results {
    margin-bottom: rem($gs-gutter * 2);
}
.event-block__no-results {
    display: none;
    &.is-shown {
        display: block;
    }
}
.event-block__events--no-header {
    @include mq(mem-full) {
        margin-left: rem(gs-span(2) + $gs-gutter);
    }
}

/* ==========================================================================
   Event Filters
   ========================================================================== */

.event-filters {
    background-color: $white;
    padding: rem($gs-gutter / 2);
    border-bottom: rem(1px) solid $mem-live-accent;

    @include mq(tablet) {
        padding: rem($gs-gutter);
    }
}
.event-filters__container {
    @include clearfix;
    @include mq(mem-full) {
        width: 100%;
        padding-left: rem(gs-span(2) + $gs-gutter);
    }
}
.event-filters__categories {
    @include mq(desktop) {
        float: left;
    }
}
.event-filters__category,
.event-filters__count {
    @include fs-textSans(2);
    display: inline-block;
    padding: rem($gs-gutter / 4) 0;
    @include mq(mobileLandscape) {
        padding: rem($gs-gutter / 2) 0;
    }
}
.event-filters__category {
    padding-right: rem($gs-gutter);
    @include mq(desktop) {
        margin-right: rem($gs-gutter);
        border-right: 1px solid $c-neutral4;
    }
}
.event-filters__count {
    color: $c-neutral2;
    white-space: nowrap;
    float: right;
}
.event-filters__search {
    position: relative;
    overflow: hidden;
    clear: right;

    @include mq(desktop) {
        width: auto;
        display: block;
        float: right;
        clear: none;
    }
}

/* Filter Search
   ========================================================================== */

$filter-icon-size: 18px;

.filter-search {
    display: block;
}
.filter-search__input {
    @include fs-textSans(2);
    padding: rem($gs-gutter / 2) rem($gs-gutter + $filter-icon-size);
    border: 1px solid $c-neutral3;
    border-radius: 100rem;
    width: 100%;
    outline: 0;

    @include mq(desktop) {
        width: auto;
    }
}
.filter-search__icon,
.filter-search__cross {
    position: absolute;
    top: 50%;
    margin-top: rem(-$filter-icon-size / 2);
    border: 0;
    background-color: transparent;
}
.filter-search__icon {
    left: rem($gs-gutter / 2);
}
.filter-search__cross {
    right: rem($gs-gutter / 2);
}

/* ==========================================================================
   Event Listings - Event Item
   ========================================================================== */

.event-item {
    @include clearfix;
    background-color: $c-neutral7;
    transition: background-color $transition-duration-medium ease;

    &:hover,
    *:hover {
        text-decoration: none;
    }
    &:hover {
        background-color: $c-neutral5;
        .event-item__title {
            text-decoration: underline;
        }
        .event-item__media a {
            background-color: $black;
        }
        .event-item__media img {
            opacity: .8;
        }
    }
}
.event-item__container {
    position: relative;
    @include mq(mobileLandscape) {
        height: rem(450px);
    }
}
.event-item__media {
    a, img {
        // Remove descenders
        vertical-align: text-bottom;
        display: block;
        transition: opacity $transition-duration-medium ease, background-color $transition-duration-medium ease;
    }
    img {
        // Prevent flicker on hover in WebKit
        -webkit-backface-visibility: hidden;
    }
}
.event-item__meta {
    padding: rem($gs-gutter / 2);

    .join-choose-tier & {
        padding: 0;
    }

    @include mq(tablet) {
        padding: rem($gs-baseline) rem($gs-gutter / 2);
        height: auto;
    }

    @include mq(desktop) {
        padding: rem($gs-gutter);
    }
}
.event-item__title {
    color: $black;
    margin-bottom: rem($gs-baseline);
    position: relative;

    @include fs-headline(3);
    font-weight: 500;
}
.event-item__time {
    @include fs-data(4);
    color: $black;
}
.event-item__description {
    @include fs-bodyCopy(1);
    padding: rem($gs-baseline) 0 0;
    color: $black;

    @include mq(desktop) {
        @include fs-headline(2);
        padding: rem($gs-baseline * 2) 0 0;
    }
}
.event-item__cta {
    width: 100%;
    padding: $gs-baseline 0 0;

    @include mq(tablet) {
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        padding: 0 rem($gs-gutter / 2) rem($gs-gutter / 2);
    }

    @include mq(desktop) {
        padding: 0 rem($gs-gutter) rem($gs-gutter);
    }
}
.event-item__price-amount {
    display: block;
    @include fs-header(4);
    color: $black;
}
.event-item__price-amount-discount {
    display: block;
    @include fs-data(3);
    color: $c-neutral2;
}
// the buy button
// TODO: Refactor out into an action
.event-item__action {
    position: absolute;
    bottom: rem($gs-gutter / 2);
    right: rem($gs-gutter / 2);
    width: rem(36px);
    height: rem(36px);
    padding: 0 rem(8px) 0 0;
    background-color: $mem-live-top;
    @include border-radius(50px);
    border: 0;

    @include mq(desktop) {
        bottom: rem($gs-gutter);
        right: rem($gs-gutter);
    }

    &:focus {
        outline: 0;
    }

    &:after {
        @extend .icon-arrow-right-white;
        content: '';
        fill: $black;
        float: right;
    }

    .theme--masterclasses & {
        background-color: $mem-mc-top;
        &:after {
            @extend .icon-arrow-right-black;
        }
    }
}

/* Event Location Summary
   ========================================================================== */

.event-location {
    // Remove space between inline block elements
    font-size: 0;
    line-height: 1;
    color: $c-neutral2;
}
.event-location--reversed {
    color: $white;
}
.event-location__detail {
    @include fs-data(4);
}

/* Event Status
   ========================================================================== */

.event-status {
    display: inline-block;
    &:after {
        content: '/';
        color: fade-out($c-neutral1, .8);
        display: inline-block;
        font-weight: normal;
        margin-left: .2em;
    }
    &:hover:after {
        text-decoration: none;
    }
}
.event-status--sold-out {
    color: $mem-sold-out;
}

/* ==========================================================================
   Event Listings - Event item (Hero modifier)
   ========================================================================== */

.event-item--hero {
    margin-bottom: $gutter-width-fluid;
    width: 100%;
    height: auto;

    .event-item__container {
        @include clearfix;
        height: auto;
    }

    .event-item__cta {
        position: static;
        padding: rem($gs-gutter) 0 0;
    }

    @include mq(tablet) {
        display: table;
        width: 100% + $gutter-width-fluid;
        margin-left: -$gutter-width-fluid;

        .event-item__media,
        .event-item__meta {
            width: auto;
            display: table-cell;
            vertical-align: top;
        }
        .event-item__media {
            padding-left: $gutter-width-fluid;
        }
        .event-item__meta {
            position: relative;
            width: 33.3%;
        }
        .event-item__cta {
            position: absolute;
            padding: rem($gs-gutter);
        }
        .event-item__description {
            display: none;
        }
    }

    @include mq(desktop) {
        .event-item__title {
            @include fs-headline(4);
            font-weight: 500;
        }
        .event-item__time {
            @include fs-headline(2);
        }
        .event-item__description {
            display: block;
        }
    }

}

/* ==========================================================================
   Event Listings - Event Item (Minimal modifier)
   ========================================================================== */

// use a shorter box for minimal theme
.event-item--minimal {
    .event-item__title {
        @include fs-headline(2);
        font-weight: 500;
    }
    @include mq(mobileLandscape) {
        .event-item__container {
            height: rem(240px);
        }
    }
}

/* ==========================================================================
   Event Listings - Event Item (Card modifier)
   ========================================================================== */

.event-item--card {
    .event-item__title {
        @include fs-headline(2);
        font-weight: 500;
    }
    @include mq(tablet) {
        .event-item__container {
            height: auto;
            overflow: hidden;
        }

        .event-item__media {
            width: $trailblockImgWidthLarge;
            float: left;
            margin-right: rem($gs-baseline);
        }

        .event-item__meta {
            padding-bottom: 0;
        }
    }
}

